--- a/package.json
+++ b/package.json
@@ -14,38 +14,39 @@
     "db:generate": "prisma generate"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@prisma/client": "^5.20.0",
-    "next-auth": "^5.0.0-beta.22",
     "@auth/prisma-adapter": "^2.7.2",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.23.8",
-    "react-hook-form": "^7.53.0",
     "@hookform/resolvers": "^3.9.0",
-    "date-fns": "^4.1.0",
-    "zustand": "^5.0.0",
+    "@prisma/client": "^5.20.0",
     "@tanstack/react-query": "^5.59.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4"
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
+    "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.22",
+    "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.53.0",
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.0",
-    "ts-node": "^10.9.2"
+    "postcss": "^8.4.47",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
-
