--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
