--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "@supabase/supabase-js": "^2.45.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
